--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <base href="/">
-    <title>Document</title>
-  </head>
-  <body>
-    <!-- 1. Display the application -->
-    <my-app>Loading...</my-app>
-    
-    <!-- 2. Load libraries -->
-    <script src="node_modules/core-js/client/shim.min.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
-    <script src="node_modules/zone.js/dist/zone.js"></script>
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Angular2LiteStart</title>
+  <base href="/">
 
-    <script src="node_modules/web-animations-js/web-animations.min.js"></script>
-    
-    <!-- 3. Configure SystemJS -->
-    <script>
-    System.import('system-config.js')
-      .then(function () {
-        System.import('scripts/main');
-      })
-      .catch(console.error.bind(console));
-    </script>
-  </body>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+  <app-root>Loading...</app-root>
+</body>
 </html>
